# altbn128-evm

./: .gitignore  README.md  hardhat.config.js  package.json
bls-agg-check/: Cargo.toml  keypairs.json
bls-agg-check/src/: bls.rs  lib.rs  main.rs
contracts/: AltBn128.sol
expand-key/: Cargo.toml
expand-key/src/: main.rs
scripts/: deploy.js
test/: AltBn128.test.js
