[package]
name = "bls-agg-check"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
b58 = "0.1.2"
dashu-int = "0.4.1"
hex = "0.4.3"
num-bigint = "0.4"
num-traits = "0.2.19"
rand = "=0.8.5"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10"
solana-alt-bn128-bls = "0.1.0"
solana-bn254 = "3.1.2"
solana-nostd-sha256 = "0.1.3"
thiserror = "1.0"
